1.0.0 -

- TI-9    Task spanning over whole day should show up as taking 24:00 instead
          of 23:59
          (thanks to Tomas Babej).
- TI-10   The 'total' summands in the month report are not aligned with the
          column name
          (thanks to Tomas Babej).
- TI-14   Warn when new tags are being created
          (thanks to Matthias Rieber).
- TI-16   Should handle case where taskwarrior hook is used before timew
          (thanks to Aaron Curtis).
- TI-20   Week number does not agree with Taskwarrior
          (thanks to Dirk Deimeke).
- timew 0.9.5~alpha install bug
          (thanks to Gordon Ball).
- Improved out-of-source build for themes, holidays
          (thanks to Kent R. Spillner).
- The rc.reports.<type>.totals setting should control 'Totals' label
          (thanks to Matthew Lemon).
- Supports rc.reports.<type>.cell to control the number of minutes that one
  character cell represents on a chart.
          (thanks to Matthew Lemon, Rene Vergara).
- Added basic color themes.
- Fixed problem where a specific start time closed the previous open interval
  at the current time.
          (thanks to Michael Meier).

------ current release ---------------------------

0.9.5.alpha (2016-06-20) -

- TD-49   Log when file management fails
          (thanks to Ben Boeckel).
- TD-115  Throw error when config file is missing or not readable
          (thanks to Jelle van der Waa).
- TI-2    Two line tags causes false entry in database
          (thanks to Sebastian Uharek).
- TI-3    The month report shows multi-days current task truncated
          (thanks to Tomas Babej).
- TI-4    The 'timew' command considers only the last interval
          (thanks to Tomas Babej).
- TI-5    Unicode tags not working.
          (thanks to Sergey Trofimov).
- TI-6    Exception after shortening task.
          (thanks to Sergey Trofimov).
- TI-7    Stop command shouldn't interrupt unrelated tags.
          (thanks to Sergey Trofimov).