@@ -30,3 +30,4 @@ suggestions:
   Matthew Lemon
   Rene Vergara
   Matthias Rieber
+  lumbric
